--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   go_router: ^14.8.1
+  google_fonts: ^6.2.1
+  flutter_bloc: ^9.1.0
+  equatable: ^2.0.7
+  font_awesome_flutter: ^10.8.0
+  reactive_forms: ^17.0.1
 
 dev_dependencies:
   flutter_test:
