--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,30 +11,45 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  go_router: ^14.8.1
-  google_fonts: ^6.2.1
+  google_fonts: ^6.3.1
   flutter_bloc: ^9.1.0
   equatable: ^2.0.7
   font_awesome_flutter: ^10.8.0
-  reactive_forms: ^17.0.1
-  freezed_annotation: ^3.0.0
-  flutter_svg: ^2.0.17
+  flutter_svg: ^2.2.0
   dartz: ^0.10.1
+  firebase_core: ^4.0.0
+  firebase_auth: ^6.0.1
+  firebase_messaging: ^16.0.0
+  firebase_crashlytics: ^5.0.0
+  cloud_firestore: ^6.0.0
+  shared_preferences: ^2.5.3
+  sqflite: ^2.4.2
+  path: ^1.9.1
+  json_annotation: ^4.9.0
+  dio: ^5.9.0
+  connectivity_plus: ^6.1.5
+  flutter_dotenv: ^6.0.0
+  go_router: ^16.2.1
+  riverpod_annotation: ^3.0.0-dev.17
+  flutter_riverpod: ^3.0.0-dev.17
+  intl: ^0.20.2
+  freezed_annotation: ^3.1.0
+  flex_color_scheme: ^8.2.0
+  reactive_forms: ^18.1.1
+  logger: ^2.6.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
-  freezed: ^3.0.6
-  build_runner: ^2.4.15
+  flutter_lints: ^6.0.0
+  mockito: ^5.5.0
+  build_runner: ^2.7.0
+  riverpod_generator: ^3.0.0-dev.17
+  json_serializable: ^6.11.0
+  freezed: ^3.1.0
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
     - assets/images/logos/
-    - assets/images/icons/
-    - assets/images/backgrounds/
-    - assets/animations/
-    - assets/animations/lottie/
-    - assets/data/json/
