Add ConsoleLogger with minimalist printer
Introduces a ConsoleLogger class using the logger package with a custom MinimalistPrinter for concise log output. Updates .gitignore to exclude generated Dart files.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,11 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+#ignore generated files
+**/*.g.dart
+**/*.freezed.dart
+**/*.g.freezed.dart
+**/*.mapper.dart
 
 # Symbolication related
 app.*.symbols
