--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   reactive_forms: ^18.1.1
   logger: ^2.6.1
   google_sign_in: ^7.1.1
+  package_info_plus: ^8.1.2
 
 dev_dependencies:
   flutter_test:
