--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   logger: ^2.6.1
   google_sign_in: ^7.1.1
   package_info_plus: ^8.1.2
+  flutter_animate: ^4.5.2
+  in_app_purchase: ^3.2.3
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
