Add settings screen with theme and account management
Introduces a new settings screen with sections for account, appearance (theme switching via adaptive_theme), privacy, support, and about. Adds reusable SettingsSection and SettingsTile widgets. Moves service_providers to data/services, updates routing to include the settings route, and adds a settings button to the home screen. Removes old providers/services directory. Updates dependencies to include adaptive_theme.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_animate: ^4.5.2
   in_app_purchase: ^3.2.3
   url_launcher: ^6.3.2
+  adaptive_theme: ^3.7.1+2
 
 dev_dependencies:
   flutter_test:
