--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   in_app_purchase: ^3.2.3
   url_launcher: ^6.3.2
   adaptive_theme: ^3.7.1+2
+  adaptive_dialog: ^2.4.2
 
 dev_dependencies:
   flutter_test:
