Refactor to use AppButton and AppIconButton components
Replaced usages of ElevatedButton, TextButton, OutlinedButton, and IconButton with custom AppButton and AppIconButton components across authentication, home, paywall, and settings screens. Updated button variants, sizes, and loading states for consistency. Also added the shimmer package as a new dependency.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   adaptive_theme: ^3.7.1+2
   adaptive_dialog: ^2.4.2
   feedback: ^3.2.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
