--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   adaptive_dialog: ^2.4.2
   feedback: ^3.2.0
   shimmer: ^3.0.0
+  in_app_review: ^2.0.11
 
 dev_dependencies:
   flutter_test:
