--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dev_dependencies:
   riverpod_generator: ^3.0.0-dev.17
   json_serializable: ^6.11.0
   freezed: ^3.1.0
+  change_app_package_name: ^1.5.0
 
 flutter:
   uses-material-design: true
